# django-openai-assistant

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: test.yml
src/django-openai_jlvanhulst/: openai_assistant.py
src/django_openai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/django_openai_assistant/: apps.py  assistant.py  models.py
src/django_openai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/django_openai_assistant/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_settings.py  verify_setup.py
tests/unit/: test_assistant.py
~/: .pypirc
