[build-system]
requires = ["hatchling","os", "json","openai","markdown","importlib","django","celery"]
build-backend = "hatchling.build"

[project]
name = "django-openai_jlvanhulst"
version = "0.0.1"
authors = [
  { name="JL Vanhulst", email="jl@valor.vc" },
]
description = "A Django/Celery implemention of OpenAI's Assistants to run asynchronous tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jlvanhulst/django-openai"
Issues = "https://github.com/jlvanhulst/django-openai/issues"