[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-openai-assistant"
version = "0.7.3"
dependencies = [
    "openai>=1.33.0",
    "markdown",
    "django",
    "celery",
    "redis",
    "markdown-link-attr-modifier",
    "pydantic>=2.0.0"
]
readme = "README.md"
authors = [{name = "Jean-Luc Vanhulst", email = "jl@valor.vc"}]
maintainers = [{name = "Jean-Luc Vanhulst", email = "jl@valor.vc"}]
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["django", "celery", "openai", "assistants"]
description = "Django OpenAI Assistant"
urls = {Homepage = "https://github.com/jlvanhulst/django-openai-assistant"}

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-django",
    "pytest-mock",
    "pytest-asyncio"
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.hatch.build]
exclude = ["~/*",".venv",".vscode","build"]


